objects/Apttus_Config2__ProductAttributeGroupMember__c.object
<CustomObject>
    <description>Represents the association between a product and an attribute group.</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeGroupId__c</fullName>
        <description>ID of the attribute group to which this product is associated</description>
        <label>Attribute Group</label>
        <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldUpdateCriteriaIds__c</fullName>
        <description>Field update criteria for the product attributes in group</description>
        <label>Field Update Criteria</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the attribute group</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Attribute Groups</relationshipLabel>
        <relationshipName>AttributeGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The group display sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Attribute Group Member</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>